enroll link page should format correctly on mobile

--- a/src/styles/components/sk-modal.scss
+++ b/src/styles/components/sk-modal.scss
@@ -13,9 +13,9 @@
   overflow: scroll;
   @include hide-scrollbar;
 
-  overflow-y: scroll;
-  padding-right: 17px;
-  padding-bottom: 17px;
+  // overflow-y: scroll;
+  // padding-right: 17px;
+  // padding-bottom: 17px;
   box-sizing: content-box;
 
   .sk-modal-container {
