--- a/src/styles/components/tasks.scss
+++ b/src/styles/components/tasks.scss
@@ -15,8 +15,8 @@
     
     @media only screen and (max-width: $sk-mobile-break-point) {
       box-sizing: border-box;
-      margin: 2rem 1rem;
-      width: 100vw;
+      margin: 0 1rem;
+      width: calc(100vw - 2rem);
     }
 
     h1 {
